2006-01-10  Robert Schuster  <robertschuster@fsfe.org>

	* java/beans/EventSetDescriptor.java: Reformatted and
	fixed API docs.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* java/lang/SecurityManager.java
	Fully qualified AWT class references in API docs.

2006-01-10  Robert Schuster  <robertschuster@fsfe.org>

        * java/beans/EventSetDescriptor.java:
        (getGetListenerMethod): New method.

2006-01-10  Mark Wielaard  <mark@klomp.org>

	* lib/Makefile.am (GCJX): Add -g to get linenumber info.

2006-01-10  Jeroen Frijters  <jeroen@frijters.net>

	PR classpath/25727
	* java/util/Hashtable.java
	(contains): Call equals on existing value.
	(containsKey, get, put, remove): Call equals on existing key.
	(getEntry): Call equals on existing entry.

2006-01-10  Jeroen Frijters  <jeroen@frijters.net>

	PR classpath/24618
	* java/util/AbstractMap.java
	(equals(Object,Object)): Test for identity first.
	* java/util/WeakHashMap.java
	(WeakBucket.WeakEntry.equals): Use helper method to determine equality.
	(WeakBucket.WeakEntry.toString): Fixed string representation of
	null key.
	(internalGet): Use helper method to determine equality.

2006-01-09  Robert Schuster  <robertschuster@fsfe.org>

	* java/beans/EventSetDescriptor.java: Implemented the two 1.4
	constructors.

2006-01-09  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/PlainDocument.java:
	(insertUpdate): Handle special case of an insertion immediately 
	following a newline character.

2006-01-09  Roman Kennke  <kennke@aicas.com>

	* native/jni/java-net/gnu_java_net_VMPlainSocketImpl.c
	(connect): Added stream parameter to _connect() call.
	* native/jni/java-net/gnu_java_net_VMPlainDatagramSocketImpl.c
	(connect): Added stream parameter to _connect() call.
	* native/jni/java-net/javanet.c
	(_javanet_create_localfd): Added stream parameter. Look up
	fd field based on the stream parameter either in SocketImpl or
	in DatagramSocketImpl.